--- a/sandbox/ConsoleApp/ConsoleApp.csproj
+++ b/sandbox/ConsoleApp/ConsoleApp.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
@@ -23,6 +23,10 @@
                 OutputItemType="Analyzer"
                 ReferenceOutputAssembly="false"
         />
+    </ItemGroup>
+    <ItemGroup>
+      <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="10.0.2" />
+      <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.2" />
     </ItemGroup>
 
 </Project>
