--- a/sandbox/FooGame/FooGame.csproj
+++ b/sandbox/FooGame/FooGame.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
@@ -19,6 +19,10 @@
                 OutputItemType="Analyzer"
                 ReferenceOutputAssembly="false"
         />
+    </ItemGroup>
+    <ItemGroup>
+      <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="10.0.2" />
+      <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.2" />
     </ItemGroup>
 
 </Project>
