--- a/src/Autoredi/Autoredi.csproj
+++ b/src/Autoredi/Autoredi.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFramework>net10.0</TargetFramework>
         <PackageId>Autoredi</PackageId>
         <Version>0.1.9</Version>
         <IsPackable>true</IsPackable>
@@ -11,6 +11,12 @@
     <ItemGroup>
         <ProjectReference Include="..\Autoredi.Generators\Autoredi.Generators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"/>
         <None Include="$(MSBuildProjectDirectory)\..\Autoredi.Generators\bin\$(Configuration)\netstandard2.0\Autoredi.Generators.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="10.0.2" />
+      <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.2" />
+      <PackageReference Update="Microsoft.SourceLink.GitHub" Version="10.0.102" />
     </ItemGroup>
 
 </Project>
