--- a/tests/Autoredi.Tests/Autoredi.Tests.csproj
+++ b/tests/Autoredi.Tests/Autoredi.Tests.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <!-- Enable source generators -->
@@ -11,7 +11,10 @@
 
     <ItemGroup>
         <PackageReference Include="NSubstitute" Version="5.3.0" />
-        <PackageReference Include="TUnit" Version="0.21.7"/>
+        <PackageReference Include="TUnit" Version="1.12.65" />
+        <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="10.0.2" />
+        <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.2" />
+        <PackageReference Update="Microsoft.SourceLink.GitHub" Version="10.0.102" />
     </ItemGroup>
 
     <!-- Reference the main project -->
