--- a/samples/Samples.Complete/Samples.Complete.csproj
+++ b/samples/Samples.Complete/Samples.Complete.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
@@ -7,8 +7,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <!-- Reference common interfaces -->
     <ItemGroup>
-      <ProjectReference Include="..\FooGame\FooGame.csproj" />
+        <ProjectReference Include="..\Samples.Common\Samples.Common.csproj" />
     </ItemGroup>
 
     <!-- Reference the main project -->
@@ -19,14 +20,15 @@
     <!-- Reference the source generator project -->
     <ItemGroup>
         <ProjectReference
-                Include="..\..\src\Autoredi.Generators\Autoredi.Generators.csproj"
-                OutputItemType="Analyzer"
-                ReferenceOutputAssembly="false"
+            Include="..\..\src\Autoredi.Generators\Autoredi.Generators.csproj"
+            OutputItemType="Analyzer"
+            ReferenceOutputAssembly="false"
         />
     </ItemGroup>
+
     <ItemGroup>
-      <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="10.0.2" />
-      <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.2" />
+        <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="10.0.2" />
+        <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.2" />
     </ItemGroup>
 
 </Project>
