--- a/src/Autoredi/Autoredi.csproj
+++ b/src/Autoredi/Autoredi.csproj
@@ -1,9 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net10.0</TargetFramework>
         <PackageId>Autoredi</PackageId>
-        <Version>0.1.10</Version>
+        <Version>0.2.0</Version>
         <IsPackable>true</IsPackable>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
