fix: use env var for secret check in workflow

--- a/.github/workflows/build-publish-nuget.yml
+++ b/.github/workflows/build-publish-nuget.yml
@@ -39,10 +39,13 @@ jobs:
           dotnet-version: '9.0.x'
 
       - name: Ensure GitHub Packages token
-        if: ${{ secrets.GH_PACKAGES_TOKEN == '' }}
+        env:
+          GH_PACKAGES_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}
         run: |
-          echo "Missing GH_PACKAGES_TOKEN (PAT with read:packages). Configure it in repo secrets."
-          exit 1
+          if [ -z "$GH_PACKAGES_TOKEN" ]; then
+            echo "Missing GH_PACKAGES_TOKEN (PAT with read:packages). Configure it in repo secrets."
+            exit 1
+          fi
 
       - name: Add GitHub Packages source
         run: |
