--- a/src/Autoredi/Autoredi.csproj
+++ b/src/Autoredi/Autoredi.csproj
@@ -11,11 +11,17 @@
     <ItemGroup>
         <ProjectReference Include="..\Autoredi.Generators\Autoredi.Generators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"/>
         <None Include="$(MSBuildProjectDirectory)\..\Autoredi.Generators\bin\$(Configuration)\netstandard2.0\Autoredi.Generators.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
+        <None Include="$(PkgFlowgen)\lib\netstandard2.0\Flowgen.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
+        <None Include="$(PkgMicrosoft_Extensions_DependencyInjection_Abstractions)\lib\netstandard2.0\Microsoft.Extensions.DependencyInjection.Abstractions.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Flowgen" Version="0.7.0" GeneratePathProperty="true" PrivateAssets="all" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="10.0.2" />
-      <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.2" />
+      <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.2" GeneratePathProperty="true" />
       <PackageReference Update="Microsoft.SourceLink.GitHub" Version="10.0.102" />
     </ItemGroup>
 
