--- a/samples/Samples.Basic/Samples.Basic.csproj
+++ b/samples/Samples.Basic/Samples.Basic.csproj
@@ -8,8 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.2" />
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.2" />
+        <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="10.0.2" />
+        <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.2" />
         <PackageReference Include="Autoredi" Version="0.4.6" />
     </ItemGroup>
 
